# sus-prenatal-ai-icei-puc-minas-cc

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  docker-compose.yml
Artefatos/: README.md  Roteiro_de_Testes_Clinicos_e_Seguranca.md
Codigo/: .env.example  README.md  docker-compose.yml  terminal.md
Codigo/backend/: Dockerfile  README.md  docker-entrypoint.sh  package-lock.json  package.json  prisma.config.ts  tsconfig.seed.json  vitest.config.ts
Codigo/clinical-ai/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
Codigo/clinical-ai/clinical_ai/: __init__.py  boilerplate.py  chunking.py  config.py  corpus.py  engine.py  gemini_client.py  main.py  ollama_client.py  pii.py  prompt_sanitize.py  prompts.py  reply_sanitize.py  rerank.py  safe_errors.py  vector_store.py
Codigo/clinical-ai/corpus/CartilhasSUS/: README.md
Codigo/clinical-ai/corpus/CartilhasSUS/PreNatal_AltoRisco/: README.md  notas_locais_exemplo.md
Codigo/clinical-ai/tests/: test_prompt_sanitize.py  test_safe_errors.py
Codigo/docs/: Arquitetura.md  Caderneta_Grafico_Peso.md  Escriba_STT.md  Especificacao.md  STT_GPU_DEMO.md  interfaces.md
Codigo/frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
Codigo/scripts/: demo-gpu-preflight.sh
Codigo/stt-service/: Dockerfile  README.md  requirements.txt
Codigo/webapp/: README.md  package-lock.json  package.json
Documentacao/: Arquitetura.md  Especificacao.md  Postman_Collection.md
Documentacao/ADRs/: XX-Template.md
Documentacao/DB/: DER.md
(+235 files in other folders)
