[project]
name = "clinical-ai"
version = "0.1.0"
description = "RAG + contexto clínico (PII) para pré-natal — FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0"]

[tool.ruff]
line-length = 120
target-version = "py311"
